--- a/6. Quadratic Classification.ipynb
+++ b/6. Quadratic Classification.ipynb
@@ -204,8 +204,7 @@
     "\n",
     "모든 클래스 $\\omega_i$ 에 대하여 상수인  $ \\log(|\\Sigma|)$ 를 제거하면\n",
     "\n",
-    "$$ g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
-    " + \\log(P(\\omega_i)) $$\n",
+    "$$ g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) + \\log(P(\\omega_i)) $$\n",
     "\n",
     "판별함수는 $\\mathbf{x}$ 와 평균들 간의 **마할라노비스 거리(mahalanobis distance)** 함수 \n",
     "\n",
@@ -314,7 +313,7 @@
     "2. 동일한 일반적 공분산 값을 가지며 \n",
     "3. 사전 확률이 같을 경우 \n",
     " “**최소-마할라노비스 (mahalanobis) 거리** 분류기” \n",
-    " $$ g_i(\\mathbf{x}) = -{1 \\over 2} (\\mathbf{x} -\\mu_i)^T \\Sigma_i^{-1} (\\mathbf{x} - \\mu_i) $$\n",
+    " $$ g_i(\\mathbf{x}) = -{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu_i})^T \\Sigma_i^{-1} (\\mathbf{x} - \\mathbf{\\mu_i}) $$\n",
     " \n",
     " \n",
     "**둘째**, 클래스들이 Case 1\n",
@@ -322,7 +321,7 @@
     "2. 동일한 항등 행렬에 비례하는 공분산 값을 가지며 \n",
     "3. 사전 확률이 같을 경우\n",
     "“**최소-유클리디안 (euclidian) 거리** 분류기”\n",
-    "$$ g_i(\\mathbf{x}) = -{1 \\over 2 \\sigma^2} (\\mathbf{x} -\\mu_i)^T (\\mathbf{x} - \\mu_i) $$\n"
+    "$$ g_i(\\mathbf{x}) = -{1 \\over 2 \\sigma^2} (\\mathbf{x} - \\mathbf{\\mu_i})^T (\\mathbf{x} - \\mathbf{\\mu_i}) $$\n"
    ]
   },
   {
