--- a/6. Quadratic Classification.ipynb
+++ b/6. Quadratic Classification.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "## 이차분류기(Quadratic Discriminant)\n",
     "\n",
+    "분류 대상인 클래스의 분포가 가우시안 분포를 이룰 때, 클래스를 판별하는 판별식이 행렬의 이차(2-nd order) 형식으로 표현되기 때문에 붙여진 용어가 \"이차분류기\"이다.\n",
+    "\n",
     "가우시안 분포의 공분산행렬의 종류에 따라 여러 형태가 존재\n",
     "\n",
     "Case 1: 여기에서 i 는 서로 다른 클래스를 말함. \n",
