--- a/7. Clustering.ipynb
+++ b/7. Clustering.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "<img src=\"images/GMM.png\" width=\"250px\" height=\"150px\" >\n",
     "\n",
-    "<img src=\"https://t1.daumcdn.net/cfile/tistory/99B0D633599B9AEC29\" width=250>\n",
+    "<img src=\"https://blogs.sas.com/content/iml/files/2020/07/EMalg4.png\" width=300>\n",
     "\n",
     "2. **비모수적 (non-parametric) 방법**\n",
     "이 방법은 주어진 데이터에 대한 어떠한 가정도 하지 않고 정해진 수의 클러스터들로 데이터를 나누는 방법으로 군집화 (클러스터링)라고 한다. 이 방법은 파라미터 최우추정(MLE)과 밀접하게 관련되어 있다. 대표적인 방법:  K-means 알고리즘\n",
@@ -698,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
